# libmueb-obs

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: output_hotkeys.json
src/: matrix-obs.cpp  output.cpp  output.h
